Created some functions to compare companies with sector average

--- a/prototypes/stock-analysis.ipynb
+++ b/prototypes/stock-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,22 +33,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_companies_by_segmento(segmento):\n",
-    "    df_tmp = df_basic_info[df_basic_info[\"SEGMENTO\"] == segmento]\n",
-    "    return df_tmp[[\"CD_CVM\", \"DENOM_COMERC\", \"TICKERS\"]]"
+    "def get_main_ticker(tickers):\n",
+    "    tickers = tickers.split(\";\")\n",
+    "\n",
+    "    for ticker in tickers:\n",
+    "        if ticker[4] == \"4\":\n",
+    "            return ticker\n",
+    "\n",
+    "    for ticker in tickers:\n",
+    "        if ticker[4] == \"3\":\n",
+    "            return ticker\n",
+    "\n",
+    "    return tickers[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_latest_values(ticker):\n",
+    "def get_companies_by_segmento(segmento):\n",
+    "    df_tmp = df_basic_info[df_basic_info[\"SEGMENTO\"] == segmento].copy()\n",
+    "    df_tmp[\"MAIN_TICKER\"] = df_tmp[\"TICKERS\"].apply(get_main_ticker)\n",
+    "    return df_tmp[[\"CD_CVM\", \"DENOM_COMERC\", \"MAIN_TICKER\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_latest_values_by_ticker(ticker):\n",
     "    df_history_tmp = df_history[df_history[\"TICKER\"] == ticker]\n",
     "    cd_cvm = df_history_tmp.iloc[0][\"CD_CVM\"]\n",
     "\n",
@@ -68,13 +89,34 @@
     "\n",
     "    df_right_prices_tmp = df_right_prices[df_right_prices[\"TICKER\"] == ticker]\n",
     "    df_right_prices_tmp = df_right_prices_tmp.drop([\"CD_CVM\", \"TICKER\"], axis=1).reset_index(drop=True)\n",
+    "    \n",
+    "    df_latest_values = pd.concat([df_history_tmp, df_right_prices_tmp, df_fundaments_tmp], axis=1)\n",
     "\n",
-    "    return pd.concat([df_history_tmp, df_right_prices_tmp, df_fundaments_tmp], axis=1)"
+    "    total_stocks = df_basic_info[df_basic_info[\"CD_CVM\"] == cd_cvm].iloc[0][\"NUM_TOTAL\"]\n",
+    "\n",
+    "    df_latest_values[\"MARKET_CAP\"] = df_latest_values[\"PRICE\"] * total_stocks\n",
+    "\n",
+    "    return df_latest_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_latest_values_by_segmento(segmento):\n",
+    "    df_segment = pd.DataFrame()\n",
+    "\n",
+    "    for ticker in get_companies_by_segmento(segmento=segmento)[\"MAIN_TICKER\"].values:\n",
+    "        df_segment = pd.concat([df_segment, get_latest_values_by_ticker(ticker=ticker)])\n",
+    "        \n",
+    "    return df_segment.sort_values(by=\"MARKET_CAP\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +175,7 @@
        "7  Utilidade Pública           Água e Saneamento  Água e Saneamento"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +212,7 @@
        "      <th></th>\n",
        "      <th>CD_CVM</th>\n",
        "      <th>DENOM_COMERC</th>\n",
-       "      <th>TICKERS</th>\n",
+       "      <th>MAIN_TICKER</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -178,13 +220,13 @@
        "      <th>0</th>\n",
        "      <td>906</td>\n",
        "      <td>BANCO BRADESCO S.A.</td>\n",
-       "      <td>BBDC3;BBDC4</td>\n",
+       "      <td>BBDC4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>22616</td>\n",
        "      <td>BANCO UBS PACTUAL S/A</td>\n",
-       "      <td>BPAC3;BPAC5;BPAC11</td>\n",
+       "      <td>BPAC3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -196,35 +238,35 @@
        "      <th>3</th>\n",
        "      <td>1023</td>\n",
        "      <td>BANCO DO BRASIL S.A.</td>\n",
-       "      <td>BBAS11;BBAS12;BBAS3</td>\n",
+       "      <td>BBAS3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>20532</td>\n",
        "      <td>BANCO SANTANDER (BRASIL) S.A.</td>\n",
-       "      <td>SANB3;SANB4;SANB11</td>\n",
+       "      <td>SANB4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>19348</td>\n",
        "      <td>ITAÚ UNIBANCO</td>\n",
-       "      <td>ITUB4;ITUB3</td>\n",
+       "      <td>ITUB4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    CD_CVM                   DENOM_COMERC              TICKERS\n",
-       "0      906            BANCO BRADESCO S.A.          BBDC3;BBDC4\n",
-       "1    22616          BANCO UBS PACTUAL S/A   BPAC3;BPAC5;BPAC11\n",
-       "2      922         BANCO DA AMAZONIA S.A.                BAZA3\n",
-       "3     1023           BANCO DO BRASIL S.A.  BBAS11;BBAS12;BBAS3\n",
-       "4    20532  BANCO SANTANDER (BRASIL) S.A.   SANB3;SANB4;SANB11\n",
-       "14   19348                  ITAÚ UNIBANCO          ITUB4;ITUB3"
+       "    CD_CVM                   DENOM_COMERC MAIN_TICKER\n",
+       "0      906            BANCO BRADESCO S.A.       BBDC4\n",
+       "1    22616          BANCO UBS PACTUAL S/A       BPAC3\n",
+       "2      922         BANCO DA AMAZONIA S.A.       BAZA3\n",
+       "3     1023           BANCO DO BRASIL S.A.       BBAS3\n",
+       "4    20532  BANCO SANTANDER (BRASIL) S.A.       SANB4\n",
+       "14   19348                  ITAÚ UNIBANCO       ITUB4"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -308,13 +350,274 @@
        "0      0.150059  1.834792e+11  0.190474  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_latest_values(ticker=\"BBAS3\")"
+    "get_latest_values_by_ticker(ticker=\"BBAS3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EBIT</th>\n",
+       "      <th>PROFIT</th>\n",
+       "      <th>EQUITY</th>\n",
+       "      <th>MARKET_CAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.361823</td>\n",
+       "      <td>0.361823</td>\n",
+       "      <td>0.361823</td>\n",
+       "      <td>0.361823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.183875</td>\n",
+       "      <td>0.183875</td>\n",
+       "      <td>0.183875</td>\n",
+       "      <td>0.183875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.171863</td>\n",
+       "      <td>0.171863</td>\n",
+       "      <td>0.171863</td>\n",
+       "      <td>0.171863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.160450</td>\n",
+       "      <td>0.160450</td>\n",
+       "      <td>0.160450</td>\n",
+       "      <td>0.160450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.116669</td>\n",
+       "      <td>0.116669</td>\n",
+       "      <td>0.116669</td>\n",
+       "      <td>0.116669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.005320</td>\n",
+       "      <td>0.005320</td>\n",
+       "      <td>0.005320</td>\n",
+       "      <td>0.005320</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       EBIT    PROFIT    EQUITY  MARKET_CAP\n",
+       "0  0.361823  0.361823  0.361823    0.361823\n",
+       "1  0.183875  0.183875  0.183875    0.183875\n",
+       "2  0.171863  0.171863  0.171863    0.171863\n",
+       "3  0.160450  0.160450  0.160450    0.160450\n",
+       "4  0.116669  0.116669  0.116669    0.116669\n",
+       "5  0.005320  0.005320  0.005320    0.005320"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp = get_latest_values_by_segmento(segmento=\"Bancos\")\n",
+    "df_segment_tmp = df_tmp.drop([\"DATE\", \"CD_CVM\", \"TICKER\", \"BAZIN\", \"PRICE\"], axis=1).reset_index()\n",
+    "\n",
+    "market_cap_kpis = [\"EBIT\", \"PROFIT\", \"EQUITY\", \"MARKET_CAP\"]\n",
+    "market_cap_total = df_segment_tmp[\"MARKET_CAP\"].sum()\n",
+    "\n",
+    "df_segment_tmp.drop(market_cap_kpis, axis=1).mean().to_frame().T\n",
+    "\n",
+    "df_segment_tmp[market_cap_kpis].apply(lambda x:  df_segment_tmp.iloc[x.index][\"MARKET_CAP\"] / market_cap_total)#.sum().to_frame().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>PL</th>\n",
+       "      <th>DIVIDEND_YIELD</th>\n",
+       "      <th>DIVIDEND_PAYOUT</th>\n",
+       "      <th>PVP</th>\n",
+       "      <th>EBIT</th>\n",
+       "      <th>PROFIT</th>\n",
+       "      <th>CGAR_5_YEARS</th>\n",
+       "      <th>EQUITY</th>\n",
+       "      <th>ROE</th>\n",
+       "      <th>MARKET_CAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>9.074735</td>\n",
+       "      <td>0.067122</td>\n",
+       "      <td>0.609115</td>\n",
+       "      <td>1.693078</td>\n",
+       "      <td>4.502400e+10</td>\n",
+       "      <td>3.782400e+10</td>\n",
+       "      <td>0.071490</td>\n",
+       "      <td>2.027330e+11</td>\n",
+       "      <td>0.186571</td>\n",
+       "      <td>3.432428e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15.934074</td>\n",
+       "      <td>0.017279</td>\n",
+       "      <td>0.275318</td>\n",
+       "      <td>3.286497</td>\n",
+       "      <td>1.197988e+10</td>\n",
+       "      <td>1.094716e+10</td>\n",
+       "      <td>0.230281</td>\n",
+       "      <td>5.307558e+10</td>\n",
+       "      <td>0.206256</td>\n",
+       "      <td>1.744328e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>12.216371</td>\n",
+       "      <td>0.097275</td>\n",
+       "      <td>1.188344</td>\n",
+       "      <td>0.987205</td>\n",
+       "      <td>8.911096e+09</td>\n",
+       "      <td>1.334586e+10</td>\n",
+       "      <td>-0.074140</td>\n",
+       "      <td>1.651512e+11</td>\n",
+       "      <td>0.080810</td>\n",
+       "      <td>1.630380e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4.355350</td>\n",
+       "      <td>0.094818</td>\n",
+       "      <td>0.412965</td>\n",
+       "      <td>0.829582</td>\n",
+       "      <td>4.108161e+10</td>\n",
+       "      <td>3.494804e+10</td>\n",
+       "      <td>0.150059</td>\n",
+       "      <td>1.834792e+11</td>\n",
+       "      <td>0.190474</td>\n",
+       "      <td>1.522109e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>10.480266</td>\n",
+       "      <td>0.042861</td>\n",
+       "      <td>0.449198</td>\n",
+       "      <td>0.941354</td>\n",
+       "      <td>1.597751e+10</td>\n",
+       "      <td>1.056064e+10</td>\n",
+       "      <td>-0.057066</td>\n",
+       "      <td>1.175735e+11</td>\n",
+       "      <td>0.089822</td>\n",
+       "      <td>1.106783e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3.827728</td>\n",
+       "      <td>0.073597</td>\n",
+       "      <td>0.281708</td>\n",
+       "      <td>0.781008</td>\n",
+       "      <td>1.618939e+09</td>\n",
+       "      <td>1.318372e+09</td>\n",
+       "      <td>0.466331</td>\n",
+       "      <td>6.461355e+09</td>\n",
+       "      <td>0.204040</td>\n",
+       "      <td>5.046369e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index         PL  DIVIDEND_YIELD  DIVIDEND_PAYOUT       PVP          EBIT  \\\n",
+       "0      0   9.074735        0.067122         0.609115  1.693078  4.502400e+10   \n",
+       "1      0  15.934074        0.017279         0.275318  3.286497  1.197988e+10   \n",
+       "2      0  12.216371        0.097275         1.188344  0.987205  8.911096e+09   \n",
+       "3      0   4.355350        0.094818         0.412965  0.829582  4.108161e+10   \n",
+       "4      0  10.480266        0.042861         0.449198  0.941354  1.597751e+10   \n",
+       "5      0   3.827728        0.073597         0.281708  0.781008  1.618939e+09   \n",
+       "\n",
+       "         PROFIT  CGAR_5_YEARS        EQUITY       ROE    MARKET_CAP  \n",
+       "0  3.782400e+10      0.071490  2.027330e+11  0.186571  3.432428e+11  \n",
+       "1  1.094716e+10      0.230281  5.307558e+10  0.206256  1.744328e+11  \n",
+       "2  1.334586e+10     -0.074140  1.651512e+11  0.080810  1.630380e+11  \n",
+       "3  3.494804e+10      0.150059  1.834792e+11  0.190474  1.522109e+11  \n",
+       "4  1.056064e+10     -0.057066  1.175735e+11  0.089822  1.106783e+11  \n",
+       "5  1.318372e+09      0.466331  6.461355e+09  0.204040  5.046369e+09  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_segment_tmp"
    ]
   }
  ],
