Added more stocks to the dataset

--- a/prototypes/yfinance-test.ipynb
+++ b/prototypes/yfinance-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,200 +12,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmig = yf.Ticker('CMIG4.SA')"
+    "cmig = yf.Ticker('AMBP3.SA')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "AMBP3.SA: Period '10y' is invalid, must be one of ['1d', '5d', '1mo', '3mo', '6mo', '1y', '2y', '5y', 'ytd', 'max']\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Dividends</th>\n",
-       "      <th>Stock Splits</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2024-09-23 00:00:00-03:00</th>\n",
-       "      <td>11.335228</td>\n",
-       "      <td>11.463365</td>\n",
-       "      <td>11.098667</td>\n",
-       "      <td>11.157806</td>\n",
-       "      <td>56707700</td>\n",
-       "      <td>0.165202</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-09-30 00:00:00-03:00</th>\n",
-       "      <td>11.320000</td>\n",
-       "      <td>11.650000</td>\n",
-       "      <td>11.110000</td>\n",
-       "      <td>11.160000</td>\n",
-       "      <td>45876300</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-10-07 00:00:00-03:00</th>\n",
-       "      <td>11.220000</td>\n",
-       "      <td>11.320000</td>\n",
-       "      <td>10.930000</td>\n",
-       "      <td>11.020000</td>\n",
-       "      <td>48846000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-10-14 00:00:00-03:00</th>\n",
-       "      <td>11.020000</td>\n",
-       "      <td>11.230000</td>\n",
-       "      <td>10.950000</td>\n",
-       "      <td>11.040000</td>\n",
-       "      <td>69240600</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-10-21 00:00:00-03:00</th>\n",
-       "      <td>11.050000</td>\n",
-       "      <td>11.140000</td>\n",
-       "      <td>10.990000</td>\n",
-       "      <td>11.030000</td>\n",
-       "      <td>7775300</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-10-16 00:00:00-03:00</th>\n",
-       "      <td>11.130000</td>\n",
-       "      <td>11.230000</td>\n",
-       "      <td>11.030000</td>\n",
-       "      <td>11.150000</td>\n",
-       "      <td>13196600</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-10-17 00:00:00-03:00</th>\n",
-       "      <td>11.080000</td>\n",
-       "      <td>11.160000</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>11.100000</td>\n",
-       "      <td>7091500</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-10-18 00:00:00-03:00</th>\n",
-       "      <td>11.170000</td>\n",
-       "      <td>11.200000</td>\n",
-       "      <td>10.950000</td>\n",
-       "      <td>11.040000</td>\n",
-       "      <td>18503600</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-10-21 00:00:00-03:00</th>\n",
-       "      <td>11.050000</td>\n",
-       "      <td>11.140000</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>11.120000</td>\n",
-       "      <td>7216700</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-10-22 00:00:00-03:00</th>\n",
-       "      <td>11.060000</td>\n",
-       "      <td>11.080000</td>\n",
-       "      <td>10.990000</td>\n",
-       "      <td>11.030000</td>\n",
-       "      <td>558600</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                Open       High        Low      Close  \\\n",
-       "Date                                                                    \n",
-       "2024-09-23 00:00:00-03:00  11.335228  11.463365  11.098667  11.157806   \n",
-       "2024-09-30 00:00:00-03:00  11.320000  11.650000  11.110000  11.160000   \n",
-       "2024-10-07 00:00:00-03:00  11.220000  11.320000  10.930000  11.020000   \n",
-       "2024-10-14 00:00:00-03:00  11.020000  11.230000  10.950000  11.040000   \n",
-       "2024-10-21 00:00:00-03:00  11.050000  11.140000  10.990000  11.030000   \n",
-       "2024-10-16 00:00:00-03:00  11.130000  11.230000  11.030000  11.150000   \n",
-       "2024-10-17 00:00:00-03:00  11.080000  11.160000  11.000000  11.100000   \n",
-       "2024-10-18 00:00:00-03:00  11.170000  11.200000  10.950000  11.040000   \n",
-       "2024-10-21 00:00:00-03:00  11.050000  11.140000  11.000000  11.120000   \n",
-       "2024-10-22 00:00:00-03:00  11.060000  11.080000  10.990000  11.030000   \n",
-       "\n",
-       "                             Volume  Dividends  Stock Splits  \n",
-       "Date                                                          \n",
-       "2024-09-23 00:00:00-03:00  56707700   0.165202           0.0  \n",
-       "2024-09-30 00:00:00-03:00  45876300   0.000000           0.0  \n",
-       "2024-10-07 00:00:00-03:00  48846000   0.000000           0.0  \n",
-       "2024-10-14 00:00:00-03:00  69240600   0.000000           0.0  \n",
-       "2024-10-21 00:00:00-03:00   7775300   0.000000           0.0  \n",
-       "2024-10-16 00:00:00-03:00  13196600   0.000000           0.0  \n",
-       "2024-10-17 00:00:00-03:00   7091500   0.000000           0.0  \n",
-       "2024-10-18 00:00:00-03:00  18503600   0.000000           0.0  \n",
-       "2024-10-21 00:00:00-03:00   7216700   0.000000           0.0  \n",
-       "2024-10-22 00:00:00-03:00    558600   0.000000           0.0  "
+       "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hist1 = cmig.history(period=\"5y\", interval=\"1wk\")\n",
-    "hist2 = cmig.history(period=\"5d\")\n",
-    "pd.concat([hist1, hist2]).tail(10).drop_duplicates()"
+    "hist1 = cmig.history(period=\"10y\", interval=\"1wk\")\n",
+    "hist1.shape[0]\n",
+    "# hist2 = cmig.history(period=\"5d\")\n",
+    "# pd.concat([hist1, hist2]).tail(10).drop_duplicates()"
    ]
   },
   {
